# protocol

./: .gitignore  Anchor.toml  README.md  local_kill_validator.sh  local_run_validator.sh  local_set_up.sh  package.json
programs/draco-protocol/: Cargo.toml
programs/draco-protocol/src/: constants.rs  lib.rs
programs/draco-protocol/src/instructions/: airdrop.rs  initialize_authority.rs  initialize_treasury.rs  lottery.rs  mod.rs  pda_owned_token_accounts.rs  protocol_authority.rs  reward_factors.rs  six_month_cliff.rs  utils.rs
programs/draco-protocol/src/state/: airdrop.rs  airdrop_claimed.rs  lottery.rs  lottery_reward_factors.rs  mod.rs  protocol_authority.rs  protocol_error.rs  six_month_cliff.rs  ticket.rs
tests/: draco-protocol.ts
